# ISC-CVRP

./: README.md  consolidate_rr_results.py  consolidate_vnd_results.py  generate_timed_experiment.sh  generate_vnds_timed_experiment.sh
GRASP_MLP/: .depend  CMakeLists.txt
GRASP_MLP/src/: grasp_mlp.cpp
GRASP_MLP/src/linear_split/: Pb_Data.cpp
GRASP_MLP/src/metaheuristic/methods/: CircleSector.h  cw_savings.cpp  cw_savings.h  giant_tour_creation.h  input_parser.cpp  neighborhood-copy  neighborhood.h  preprocessing.cpp  preprocessing.h
GRASP_MLP/src/metaheuristic/model/: read_vrp.cpp  read_vrp.h  solution.cpp
GRASP_MLP/src/metaheuristic/twiggy_core/: criterion.cpp  decision_tree.cpp  random_forest.cpp  random_forest.h  utils.cpp
ONLY_GRASP/: CMakeLists.txt
ONLY_GRASP/src/: only_grasp.cpp
ONLY_GRASP/src/linear_split/: Pb_Data.h
ONLY_GRASP/src/metaheuristic/methods/: Welford.hpp  cw_savings.h  giant_tour_creation.cpp  input_parser.h  neighborhood.cpp  preprocessing.cpp  ruin_and_recreate.hpp  vnd.cpp
ONLY_GRASP/src/metaheuristic/model/: solution.h
RR_GRASP_MLP/: CMakeLists.txt  Makefile
RR_GRASP_MLP/src/: grasp_mlp.cpp
RR_GRASP_MLP/src/metaheuristic/methods/: SimulatedAnnealing.hpp  cw_savings.cpp  neighborhood.h  ruin_and_recreate.hpp
RR_GRASP_MLP/src/metaheuristic/model/: instance.h
RR_GRASP_MLP/src/metaheuristic/twiggy_core/: criterion.h  decision_tree.h  splitter.cpp  splitter.h  utils.h
RR_ONLY_GRASP/: CMakeLists.txt  Makefile  libboost.txt
RR_ONLY_GRASP/src/: rr_only_grasp.cpp
RR_ONLY_GRASP/src/metaheuristic/methods/: cw_savings.h  preprocessing.h  vnd.h
RR_ONLY_GRASP/src/metaheuristic/model/: instance.cpp
instances/: X-n247-k50.vrp  X-n524-k153.vrp  X-n670-k130.vrp
results/: Results of experiments.csv
results/complete_grasp/: validation_grasp_only_X-n176-k26_s34
results/consolidated_results/: resultados_consolidados_30-03-2022.csv
results/features_datasets/: train_vrp_features_train_X-n247-k50.vrp_s10_it
results/solutions_datasets/: train_grasp_mlp_X-n247-k50_s10_it
results/validation_solutions/: global_mlp_X-n247-k50_s10  validation_grasp_mlp_X-n247-k50_s10
